# data-struct-exp

./: CMakeLists.txt  countLines.cpp  line.cpp
experiment_1/: experiment_1_1.cpp  experiment_1_1_1.cpp  experiment_1_1_2.cpp  experiment_1_2.cpp  experiment_1_3.cpp
experiment_2/: 2_1.cpp  2_2.cpp  2_3.cpp
experiment_3/: experiment_3_1.cpp  experiment_3_2.cpp  experiment_3_3.cpp
experiment_4/: 4_1.cpp  4_2.cpp
experiment_5/: 5_1.cpp
experiment_6/: 6_1.cpp  6_2.cpp
experiment_7/: 7_1.cpp  7_2.cpp  7_3.cpp
experiment_8/: 8_1.cpp  8_2.cpp
fileSystem/: File.hpp  main.cpp
