cmake_minimum_required(VERSION 3.17)
project(struct_exp)

set(CMAKE_CXX_STANDARD 17)

add_executable(struct_exp1_1
        experiment_1/experiment_1_1.cpp)

add_executable(struct_exp1_1_1
        experiment_1/experiment_1_1_1.cpp)

add_executable(struct_exp1_1_2
        experiment_1/experiment_1_1_2.cpp)

add_executable(struct_exp1_2
        experiment_1/experiment_1_2.cpp)

add_executable(struct_exp1_3
        experiment_1/experiment_1_3.cpp)

add_executable(struct_exp_2_1
        experiment_2/2_1.cpp)

add_executable(struct_exp_2_2
        experiment_2/2_2.cpp)

add_executable(struct_exp_2_3
        experiment_2/2_3.cpp)

add_executable(struct_exp_3_1
        experiment_3/experiment_3_1.cpp)

add_executable(struct_exp_3_2
        experiment_3/experiment_3_2.cpp)

add_executable(struct_exp_3_3
        experiment_3/experiment_3_3.cpp)

add_executable(struct_exp_4_1
        experiment_4/4_1.cpp)

add_executable(struct_exp_4_2
        experiment_4/4_2.cpp)

add_executable(struct_exp_5
        experiment_5/5_1.cpp)

add_executable(test
        countLines.cpp)

add_executable(struct_exp_6_1
        experiment_6/6_1.cpp)

add_executable(struct_exp_6_2
        experiment_6/6_2.cpp)

add_executable(struct_exp_7_1
        experiment_7/7_1.cpp)

add_executable(struct_exp_7_2
        experiment_7/7_2.cpp)

add_executable(struct_exp_7_3
        experiment_7/7_3.cpp)

add_executable(struct_exp_8_1
        experiment_8/8_1.cpp)

add_executable(struct_exp_8_2
        experiment_8/8_2.cpp)

add_executable(line
        line.cpp)
add_executable(fileSystem
        fileSystem/File.hpp
        fileSystem/main.cpp)